--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "boostrap": "^2.0.0",
+    "bootstrap-scss": "^5.0.2",
     "firebase": "^8.7.0",
-    "firebaseui": "^4.8.0",
-    "firebaseui-angular": "^5.1.3",
+    "npm": "^7.19.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
