--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^8.7.0",
     "npm": "^7.19.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.20",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
