--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.1",
     "firebase": "^8.6.8",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.2",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
