--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,7 +19,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: npm install 
-      - run: npm run build 
+      - run: npm run dev
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
