--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~12.0.1",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "@types/googlemaps": "^3.39.13",
+    "@google/maps": "^1.1.3",
+    "@types/lodash": "^4.14.172",
     "boostrap": "^2.0.0",
     "bootstrap-scss": "^5.0.2",
     "firebase": "^8.7.0",
-    "npm": "^7.19.1",
+    "lodash": "^4.17.21",
+    "npm": "^7.20.6",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.2",
     "tslib": "^2.1.0",
@@ -36,6 +38,8 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
+    "@types/google__maps": "^0.5.16",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "firebase-tools": "^8.0.0 || ^9.0.0",
