--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@google/maps": "^1.1.3",
     "@types/lodash": "^4.14.172",
+    "animate.sass": "^1.0.1",
     "boostrap": "^2.0.0",
     "bootstrap-scss": "^5.0.2",
     "firebase": "^8.7.0",
